<resources>
    <string name="app_name">ProjectAndroid1</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string-array name="SpinnferFor">
        <item>Foods</item>
        <item>Accessoris</item>
        <item>Gadget</item>
        <item>Fashion</item>
    </string-array>
</resources>
