<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

    <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/ic_search"/>
    <item
            android:id="@+id/add"
            android:title="@string/add"
            android:icon="@drawable/ic_addnew"/>

    <item
            android:id="@+id/message"
            android:title="@string/message"
            android:icon="@drawable/ic_message"/>
    <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>

</menu>